Revision history for HTTP-Message

{{$NEXT}}

6.27      2021-01-05 03:02:01Z
    - Clean up backcompat code (GH#148) (Dan Book)
    - Add "308 Permanent Redirect" to is_cacheable_by_default (GH#150) (simbabque)

6.26      2020-09-10 02:34:25Z
    - Update comment which explains in which RFC 451 is defined (GH#143) (Olaf
      Alders). Reported by Toby Inkster.
    - Fix HTTP status descriptions and add 425 Too Early (GH#145) (Dan Book)

6.25      2020-06-28 17:52:12Z
    - Don't run Changes test on master in GH actions
    - move Clone from required to suggests prerequisite, to re-enable
      fatpacking

6.24      2020-05-11 13:15:25Z
    - Full release.  No changes since TRIAL release 6.23

6.23      2020-05-07 17:57:18Z (TRIAL RELEASE)
    - Enable static install (GH#134) (Olaf Alders)
    - Support non-string header values that stringify (GH#137) (Will Storey)

6.22      2020-02-24 18:58:07Z
    - Full release.  No changes since TRIAL release 6.21

6.21      2020-02-19 14:35:09Z (TRIAL RELEASE)
    - Bump Encode to latest version (3.01) (GH#129) (Olaf Alders)
    - Revert #115 (GH#131) (Olaf Alders)
    - Revert (GH#125) "try hard to make a usable file name" (GH#130) (Olaf
      Alders)
    - Fix JSON request encoding examples in POD (GH#126) (Michael Schout)

6.20      2019-02-05 01:46:39Z (TRIAL RELEASE)
    - Fix encoded file names when LC_ALL=C (GH#125) (Lars Dɪᴇᴄᴋᴏᴡ 迪拉斯)

6.19      2019-01-16 15:17:35Z (TRIAL RELEASE)
    - Add support for RFC 8187 encoded filenames (GH#115) (Zaki Mughal)
    - Fix memoized _uri_canonical #121 (GH#123) (Dorian Taylor)
    - Don't overwrite $@ in decodable (gh #80) (GH#118) (mschae94)
    - Add support for RFC 8187 encoded filenames (GH#115) (Zaki Mughal)

6.18      2018-06-05 16:29:15Z
    - Revert status_message to original code (GH#111) (Theo van Hoesel)

6.17      2018-06-05 01:55:34Z
    - Documented status code 451 in the list of constants (GH #104) (Robert Rothenberg)